# ronzz-py-tools

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/ronzz_tool/: __init__.py  audio.py  epub2md.py  img2SVG.py  pdf2md.py  pdf2png.py  tatoeba-scraper.py  test.py  testTemp.py  textProc.py  translate.py  youTube.py
tests/testOutput/: testMD1.md  testMD1_fr.md
