[project]
name = "ronzz-tool"
version = "0.1.0"
description = "Une collection de mini-outils Python"
authors = [
    {name = "Ron Chou",email = "ron@ronzz.org"}
]
license = {text = "AGPL 3.0"}
readme = "README.md"
requires-python = "<3.14,>=3.12"
dependencies = [
    "pdfplumber (>=0.11.6,<0.12.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "googletrans (>=4.0.2,<5.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "yt-dlp (>=2025.3.31,<2026.0.0)",
    "google-play-scraper (>=1.2.7,<2.0.0)",
    "pyside6 (>=6.9.0,<7.0.0)",
    "pyperclip (>=1.9.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "ronzz_tool", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
